# simple_statistics

./: Cargo.toml  readme.md
benches/: bench.rs
src/: counting.rs  file_reading.rs  hypothesis_testing.rs  lib.rs  main.rs  multiple_linear_regression.rs  sampling.rs  simple_linear_regression.rs  tests.rs  utilities.rs
src/datasets/: Fish.csv  data_banknote_authentication.csv  unique_passengers.csv
tests/: tests.rs
