[package]
name = "simple_statistics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rust_decimal = "1.15.0"
rust_decimal_macros = "1.15"
csv = "1.1.6"
libmath = "0.2.1"
ndarray = "0.15.3"